--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "require-all": "^3.0.0"
+    "require-all": "^3.0.0",
+    "socket.io": "^4.0.1",
+    "socketio-jwt": "^4.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
